tests/invalid_code/while_stmt.bs
fn main() {
    while 1 { }
}
