tests/invalid_code/while_stmt.out
tests/invalid_code/while_stmt.bs:2:11: error: non-boolean `while` condition
